Bug 15662 - vfs_widelinks with DFS shares breaks case insensitivity.
Summary: vfs_widelinks with DFS shares breaks case insensitivity.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL: https://gitlab.com/samba-team/samba/-...
Keywords:
Depends on:
Blocks:
 
Reported: 2024-06-11 00:29 UTC by Jeremy Allison
Modified: 2024-06-19 14:35 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.20.next (5.41 KB, patch)
2024-06-11 23:29 UTC, Jeremy Allison
npower: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2024-06-11 00:29:11 UTC
From Michael Tokarev <mjt@tls.msk.ru>. Reproducer:

# Global parameters
[global]
        server role = standalone server
        smb1 unix extensions = No
        usershare max shares = 0
        idmap config * : backend = tdb
        wide links = Yes


[tst]
        msdfs root = Yes
        path = /home/mjt

$ smbclient //localhost/tst
Password for [WORKGROUP\mjt]:
Try "help" to get a list of possible commands.
smb: \> cd X
cd \X\: NT_STATUS_OBJECT_NAME_NOT_FOUND
smb: \> dir
  x                                   D        0  Fri Jun  7 13:48:45 2024

Have fix and regression test, need bug number.
Comment 2 Samba QA Contact 2024-06-11 17:01:03 UTC
This bug was referenced in samba master:

e37e4f474935819c75c078e52715cf3212f77359
e535bcc698bd5eb31f5c5e0c144692988a044e79
Comment 3 Jeremy Allison 2024-06-11 23:29:19 UTC
Created attachment 18333 [details]
git-am fix for 4.20.next

Cherry-pick from master.

This code doesn't apply to 4.19, as that still has the "ENOENT" return, not the ELOOP return.
Comment 4 Noel Power 2024-06-12 08:41:59 UTC
reassign to Jule for inclusion in 4.20
Comment 5 Jule Anger 2024-06-12 09:19:31 UTC
Pushed to autobuild-v4-20-test.
Comment 6 Samba QA Contact 2024-06-12 10:23:03 UTC
This bug was referenced in samba v4-20-test:

f681ee3bac0ebe86ea1e810aca13e0b5738c58e0
e57e35908d53124d44d4c275a9f6b248516204ae
Comment 7 Samba QA Contact 2024-06-19 14:35:40 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.2):

f681ee3bac0ebe86ea1e810aca13e0b5738c58e0
e57e35908d53124d44d4c275a9f6b248516204ae